--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0-development",
   "description": "Lint all relevant commits for a change or PR on Jenkins CI",
   "main": "src/index.js",
+  "bin": {
+    "commitlint-jenkins": "./src/index.js"
+  },
   "files": [
     "src"
   ],
