--- a/package.json
+++ b/package.json
@@ -34,11 +34,17 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^8.2.0",
     "@mixmaxhq/prettier-config": "^1.0.0",
+    "@mixmaxhq/semantic-release-config": "^1.0.0",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.6.0",
     "eslint-config-mixmax": "^3.4.0",
     "prettier": "^1.18.2",
     "semantic-release": "^15.13.28"
+  },
+  "release": {
+    "extends": [
+      "@mixmaxhq/semantic-release-config"
+    ]
   },
   "config": {
     "commitizen": {
