--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
     "prettier": "^1.18.2",
     "semantic-release": "^15.13.30"
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "release": {
     "extends": [
       "@mixmaxhq/semantic-release-config"
