--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "homepage": "https://github.com/mixmaxhq/commitlint-jenkins#readme",
   "dependencies": {
-    "@commitlint/cli": "^8.3.4",
     "@octokit/rest": "^16.34.1",
     "execa": "^3.2.0",
     "hosted-git-info": "^3.0.2",
@@ -36,7 +35,9 @@
     "yargs": "^14.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@mixmaxhq/git-hooks": "^1.0.1",
     "@mixmaxhq/prettier-config": "^1.0.0",
     "@mixmaxhq/semantic-release-config": "^2.0.0",
     "cz-conventional-changelog": "^3.0.2",
